# wasm3-function-stack-height-bug

./: .gitignore  Cargo.toml  README.md  app.wasm  build.sh
src/: lib.rs
wasm3_arduino/: app_wasm.h  wasm3_arduino.ino
